# bevy_loadcontext_example

./: Cargo.toml  README.md
src/: loader.rs  main.rs
